--- a/src/cr/ac/uam/view/frmFactura.form
+++ b/src/cr/ac/uam/view/frmFactura.form
@@ -9,10 +9,13 @@
             <Property name="text" type="java.lang.String" value="Archivo"/>
           </Properties>
           <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem1">
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItemImprimir">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Imprimir factura a PDF"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemImprimirActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
